# branchbot-deploy

./: .env.example  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  BACKEND_SNAPSHOT_2026-03-06.txt  BRANCHBOT_BRIDGE.md  CODEOWNERS  CONTRIBUTING.md  CURRENT_STATUS.md  DEPLOYMENT_READY.bat  DEPLOYMENT_TRUTH.md  EMAIL_CAMPAIGN.md  FINAL_BUNDLE_SUMMARY.py  Gumroad_Listing_Description.txt  LICENSE  Makefile  NAMING_DECISION.md  Notion_Page_Structure.md  PROOF_CHECKLIST.md  PR_7_DESCRIPTION_UPDATE.md  PR_SUMMARY.md  Procfile  README.md  REPOSITORY_README.md  SECURITY.md  agent-permissions.yml  branchbot  branchbot_auto_suite.py  branchbot_env.py  branchbot_fullstack_test.py  branchbot_script.py  index.html  mypy.ini  ops.bat  pyproject.toml  pytest.ini  railway.json  (+8 more)
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  config.yml  feature.md  feature_request.md  task.md
.github/workflows/: branchbot-weekly.yml  ci.yml  codeql.yml  contracts-bot.yml  daily-scan.yml  gumroad-sync-social-pr.yml  labeler.yml  labels-sync.yml  leadgen-ci.yml  quality-gates.yml  release.yml  weekly.yml
.github/workflows/ops/gumroad-agent/config/: gumroad.config.yaml
.github/workflows/ops/gumroad-agent/config/ops/gumroad-agent/agents/: gumroad_sync.py
.github/workflows/ops/gumroad-agent/ops/gumroad-agent/scripts/: social_post_out.py
apps/: __init__.py
apps/common/: __init__.py  pdf.py
apps/contracts/: README.md  __init__.py  main.py  mo_buys_parser.py  receipt_generator.py
apps/contracts/layouts/: __init__.py  compliance_pdf.py
apps/contracts/samples/: form_sample.json
apps/family/: README.md  __init__.py  checklist_generator.py  intake_generator.py  main.py
apps/leadgen-site/: .env.local.example  README.md  jest.config.js  package-lock.json  package.json
apps/leadgen-site/pages/: _app.tsx  checkout.tsx  index.tsx  thank-you.tsx
apps/leadgen-site/pages/api/: lead.ts
apps/leadgen-site/tests/: lead.api.test.ts
bots/contracts-bot/contracts_bot/: __main__.py  run.py  utils.py
bots/contracts-bot/contracts_bot/adapters/: base.py  mobuys_rss.py  sam_api.py
bots/contracts-bot/contracts_bot/scrapers/: missouribuys.py  sam_gov.py
bots/contracts-bot/contracts_bot/sinks/: csv_sink.py  google_sheets_sink.py  notion_sink.py
branchberg/: __init__.py
branchberg/app/: __init__.py  database.py  main.py
branchberg/app/revenue_agent/: __init__.py  config.py  repository.py  service.py
branchberg/app/revenue_agent/notifications/: __init__.py  base.py  slack.py
branchberg/app/revenue_agent/webhooks/: __init__.py  gumroad.py  stripe.py
branchberg/app/routes/: po_flow.py  revenue.py  system.py
branchberg/app/schemas/: common.py  po_flow.py  revenue.py
branchberg/app/services/: audit.py  po_flow.py
branchberg/dashboard/: __init__.py  streamlit_app.py
branchbot/: __init__.py  notion_env.py  test_minimal.py
branchbot_cli/: main.py
branchbot_deploy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
config/: contracts.yaml  settings.json
dashboard/: Procfile
data/: README.md
data/contracts/: 2025-08-11.csv
data/import/: mobuys.csv  mobuys.sample.csv
data/output/: opps_20250812T015013Z.csv
docs/: CHANGELOG.md  INCOME_INGEST.md  OPERATIONS.md  PO_TO_PAID_RISK_AUDIT.md  QUICKSTART.md  README.md  REPO_RISK_REVIEW.md  SECURITY.md
github/events/pr_ready_for_review/: 70.json
gumroad/: __init__.py
jobs/: __init__.py
jobs/funnels/: README.md  __init__.py  run.py
jobs/funnels/adapters/: __init__.py
ops/: .env.template  ENV_SETUP.md  PLAYBOOK.md  healthcheck.py  logwrap.ps1  notify.py  schedule.ps1  test_email.py
ops/gumroad-agent/agents/: gumroad_sync.py
ops/gumroad-agent/config/: gumroad.config.yaml
ops/gumroad-agent/scripts/: social_post_out.py
ops/win/: register_task.ps1  run_once.ps1
ops_out/: actions_log.md  env_check.md  scan_report.md  tests_report.md
proposal_generator/: .gitignore  README.md
proposal_generator/app/: __init__.py  main.py  models.py  pdf_generator.py  utils.py
proposal_generator/data/: sample_input.json
scripts/: Code.gs  Sidebar.html  apps_script_setup.gs  run-local.ps1  run-local.sh  weekly.py
tests/: conftest.py  sitecustomize.py  test_branchberg.py  test_branchbot_suite.py  test_dedupe.py  test_environment.py  test_filters_and_sam.py  test_lead_form.spec.ts  test_mobuys_adapter.py  test_parsers.py  test_sam_normalization.py
tests/apps/contracts/: test_compliance_pdf_layout.py  test_contracts_scaffold.py  test_parser_and_generator.py
tests/apps/family/: test_family_generators.py  test_family_scaffold.py  test_intake_pdf_layout.py
tests/branchberg/: __init__.py  conftest.py  test_health.py  test_health_version.py  test_income_ingest.py  test_po_flow.py  test_revenue_agent_webhooks.py  test_smoke.py
tests/jobs/funnels/: test_funnels_data_snapshot.py  test_funnels_scaffold.py
